ajuste indice temático

--- a/source/pug/includes/page-home_indice_tematico.pug
+++ b/source/pug/includes/page-home_indice_tematico.pug
@@ -17,4 +17,5 @@ h2 Desarrollo de <br>contenidos
                     +navTemaItem('question', 'Actividad didáctica: good food', 'main.html#page/actividad-2/') 
                     +navTemaItem('question', 'Actividad didáctica: fiesta de los seres vivos', 'main.html#page/actividad-3/') 
                     +navTemaItem('question', 'Actividad didáctica: circulando ando', 'main.html#page/actividad-4/')                                                              
-                    +navTemaItem('3', 'Referente ecosistémico', 'main.html#page/ecosistemico/')                       
+                    +navTemaItem('3', 'Referente ecosistémico', 'main.html#page/ecosistemico/')
+                    +navTemaItem('4', 'Biotecnología', 'main.html#page/biotecnologia/')                       
