--- a/source/pug/material.pug
+++ b/source/pug/material.pug
@@ -44,6 +44,7 @@ html(lang="es")
                                     +navTemaItem('question', 'Actividad didáctica: fiesta de los seres vivos', '#evaluacion-3') 
                                     +navTemaItem('question', 'Actividad didáctica: circulando ando', '#evaluacion-4')                                                              
                                     +navTemaItem('3', 'Referente ecosistémico', '#tema-3') 
+                                    +navTemaItem('4', 'Biotecnología', '#tema-4')
                                     +navTemaItem('glosary', 'Glosario', '#glosario')
                                     +navTemaItem('folder', 'Material complementario', '#anexos')
                                     +navTemaItem('references', 'Referencias bibliográficas', '#referencias')
@@ -66,6 +67,8 @@ html(lang="es")
                 include pages/actividad-4.pug
             #tema-3
                 include pages/3-tema.pug
+            #tema-4
+                include pages/4-tema.pug                
             #glosario
                 include pages/glosario.pug
             #anexos
