--- a/source/pug/mixins/functions.pug
+++ b/source/pug/mixins/functions.pug
@@ -6,7 +6,7 @@ mixin pageHeader(tituloTema, srcImagen, pagina)
 
             .col-12.col-lg-6
 
-                h3#curso-titulo-componente.curso-subtitulo Habilidades cognitivas en ciencias naturales.
+                h3#curso-titulo-componente.curso-subtitulo Biología
                 h1#curso-titulo-tema.curso-titulo Entorno vivo
 
  
@@ -105,8 +105,9 @@ mixin creditosFooter(ruta)
                 .col-12.col-md-5
                     h3.footer-subtitulo.mb-4 ECOSISTEMA DE RECURSOS EDUCATIVOS DIGITALES 
 
+
                     p.footer-texto.mb-2
-                        | #[strong Ingry Dayanna Bonilla Monzón]<br/>   
+                        | #[strong Maria Camila Garcia Santamaria]<br/>   
                         span.text-small Líder del equipo
 
             .row.mt-5
@@ -116,18 +117,8 @@ mixin creditosFooter(ruta)
                         | Contenido Instruccional
 
                     p.footer-texto.mb-2
-                        | #[strong Gloria Matilde Lee Mejía	 ]<br/>   
-                        span.text-small Responsable del equipo
-
-                    p.footer-texto
-                        span.text-small.text-uppercase Centro de Comercio y Servicios
-                        br
-                        span.text-small Regional Tolima
-
-
-                    p.footer-texto.mb-2
                         | #[strong Rafael Nelftalí Lizcano Reyes]<br/>               
-                        span.text-small Asesor pedagógico<br/>
+                        span.text-small Asesor metodologógico y pedagógico<br/>
 
                     p.footer-texto
                         span.text-small.text-uppercase Centro industrial del diseño y la manufactura  
@@ -150,15 +141,6 @@ mixin creditosFooter(ruta)
 
                     p.footer-texto
                         span.text-small.text-uppercase Centro de diseño y metrología
-
-                    p.footer-texto.mb-2
-                        | #[strong Martha Isabel Martínez Vargas]<br/>   
-                        span.text-small Asesor pedagógico<br/>
-
-                    p.footer-texto
-                        span.text-small.text-uppercase Centro industrial del diseño y la manufactura
-                        br
-                        span.text-small Regional Santander
                        
                 .col-12.col-md-5
                     h4.footer-subtitulo-2.mt-0 
@@ -195,14 +177,13 @@ mixin creditosFooter(ruta)
                         .fa.fa-caret-right.mr-2
                         | Gestores de repositorio
 
-                    p.footer-texto                           
-                        | #[strong Edwin Mauricio Lamprea Hernández]<br/>  
-                        | #[strong Mauricio Eduardo Campuzano Mendez.]<br/>
-                        | #[strong William Rafael Castillo Ali]<br/>
-                        span.text-small Validación de recursos<br/>
+                    p.footer-texto
+                        | #[strong Milady Tatiana Villamil Castellanos]<br/>                    
+    
+                        span.text-small Validación de recursos.<br/>
 
                     p.footer-texto
-                        span.text-small.text-uppercase CENTRO DE COMERCIO Y SERVICIOS
+                        span.text-small.text-uppercase Centro de comercio y servicios  
                         br
                         span.text-small Regional Tolima
 
