--- a/source/pug/pages/actividad-1.pug
+++ b/source/pug/pages/actividad-1.pug
@@ -3,7 +3,7 @@
 .container
 
     .header-ecored
-        h1 Actividad didáctica: Referente celular
+        h1 Actividad didáctica: referente celular
 
 
     .row.align-items-center.justify-content-center.my-5
