Se realizan correcciones

--- a/source/pug/pages/4-tema.pug
+++ b/source/pug/pages/4-tema.pug
@@ -50,7 +50,7 @@
                             .list__item__icon
                                 img.img-a(src="assets/images/pages/ilustraciones/v1.svg").img-fluid  
                         .list__txt    
-                            p.m-top Incrementa la flexibilidad en la forma de cultivos ya que gracias a la biotecnología se ha logran cultivos mejorados y resistentes a plagas. 
+                            p.m-top Incrementa la flexibilidad en la forma de cultivos ya que gracias a la biotecnología se han logrado cultivos mejorados y resistentes a plagas. 
 
                     .list.mt-2
                         .list__item
